# CreatorC

./: CMakeLists.txt  README.md  Resources.qrc  action.cpp  action.h  blockcontent.cpp  blockcontent.h  codeeditor.cpp  codeeditor.h  documenthighlighter.cpp  documenthighlighter.h  error.cpp  error.h  linenumberarea.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mypalettes.h  scaner.cpp  scaner.h  stack.h
Lexemes/: charanalyzer.cpp  charanalyzer.h  customtypeanalyzer.cpp  customtypeanalyzer.h  definedtype.cpp  definedtype.h  doubleanalyzer.cpp  doubleanalyzer.h  enumanalyzer.cpp  enumanalyzer.h  floatanalyzer.cpp  floatanalyzer.h  func.cpp  func.h  identifier.cpp  identifier.h  intanalyzer.cpp  intanalyzer.h  lexeme.h  structanalyzer.cpp  structanalyzer.h  token.cpp  token.h  type.cpp  type.h  typeanalyzer.cpp  typeanalyzer.h  unionanalyzer.cpp  unionanalyzer.h  var.h  voidanalyzer.cpp  voidanalyzer.h
